# xieps

./: .gitignore  AUTHORS  Doxyfile  Makefile-old  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.scan  configure_for_dev.sh  deps-info.txt
demo/: Makefile.am  Makefile.in  book_quinn1.xml2  demo.c  xieps_demo.c  xieps_demo.h
demo_files/: mountain.xcf  sky.xcf  start_button.xcf  start_button_action.xcf  start_button_focus.xcf
docs/: SDL-install-output.txt  alpha-performance.org  code_design_overview.odg  events.org
sdl_player/: Makefile.am  Makefile.in  xi_sdl.c  xi_sdl.h  xi_sdl_movie-EXAMPLE-CODE.cpp  xi_sdl_movie-EXAMPLE-CODE.h  xi_sdl_player.c  xi_sdl_player.h
src/: Makefile.am  Makefile.in  xi_data.c  xi_data.h  xi_enums.h  xi_error.c  xi_error.h  xi_points.c  xi_points.h  xieps.c  xieps.h
story/: conventions.xml  settings.xml
story/data/design/: quinn1.book.xml
story/data/movements/: enter_from_left.xml  zigzag.xml
tests/: HELP  Makefile.am  Makefile.in  xieps_test.c
